# ha-domoticz-sync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  hacs.json  pyproject.toml  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/maintainer/: context.md  contributors.md  decisions.md  patterns.md  runs.md  standing-rules.md  state.json
.github/maintainer/notes/: PR-4.md  PR-5.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  hacs-validation.yml  hassfest.yml  pip-audit.yml  release-please.yml
custom_components/domoticz_import/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  sensor.py
custom_components/domoticz_import/translations/: en.json
custom_components/domoticz_sync/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  models.py  sensor.py  strings.json
tests/: conftest.py  test_api.py  test_models.py
